appId: com.pearprogramming.wingmanapp
---
- runFlow: ../utils/launch.yaml
- openLink: "wingmanapp://login"
- assertVisible: "Welcome Back"

- tapOn: "Continue with email"
- assertVisible: "Email is required"
- assertVisible: "Password is required"

- tapOn:
    id: "email"
- eraseText
- inputText: "not-an-email"
- tapOn: "Continue with email"
- assertVisible: "Invalid email address"

- tapOn:
    id: "email"
- eraseText
- inputText: ${EMPTY_USER_EMAIL}
- tapOn:
    id: "password"
- eraseText
- inputText: "abc"
- tapOn: "Continue with email"
- assertVisible: "Password must be at least 6 characters"

- tapOn:
    id: "password"
- eraseText
- inputText: "wrongpassword"
- tapOn: "Continue with email"
- assertVisible: "Invalid login credentials"
